# cappy_code

./: .env.example  .gitignore  AGENT.md  CAPPY.md  LICENSE  README.md  cappy_config.yaml  pyproject.toml  requirements.txt
cappy/: __init__.py  agent.py  ai_client.py  analytics.py  chat.py  cli.py  config.py  logger.py  performance.py  requirements-dev.txt  tools.py  ui.py  undo.py
cappy/completion/: cappy-completion.bash
cappy/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
cappy/tests/: test_agent.py  test_config.py  test_tools.py
